--- a/CFSM_WEB/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/CFSM_WEB/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="~/LayoutAdmin/assets/css/style.css">
     <!-- End layout styles -->
     <link rel="shortcut icon" href="~/LayoutAdmin/assets/images/favicon.ico" />
+    @RenderSection("Styles", required: false) 
 </head>
 <body>
     <div class="container-scroller">
@@ -44,7 +45,7 @@
         <!-- partial:partials/_navbar.html -->
         <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
             <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-                <a class="navbar-brand brand-logo" href="index.html"><img src="~/LayoutAdmin/assets/images/logo.svg" alt="logo" /></a>
+                <a class="navbar-brand brand-logo" asp-controller="HomeAdmin" asp-action="Index"><img src="~/LayoutAdmin/assets/images/logo.svg" alt="logo" /></a>
                 <a class="navbar-brand brand-logo-mini" href="index.html"><img src="~/LayoutAdmin/assets/images/logo-mini.svg" alt="logo" /></a>
             </div>
             <div class="navbar-menu-wrapper d-flex align-items-stretch">
@@ -164,7 +165,7 @@
                         </div>
                     </li>
                     <li class="nav-item nav-logout d-none d-lg-block">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" asp-action="Login" asp-controller="KhachHang">
                             <i class="mdi mdi-power"></i>
                         </a>
                     </li>
@@ -200,7 +201,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">
+                        <a class="nav-link" asp-controller="HomeAdmin" asp-action="Index">
                             <span class="menu-title">Dashboard</span>
                             <i class="mdi mdi-home menu-icon"></i>
                         </a>
@@ -224,28 +225,11 @@
                             </ul>
                         </div>
                     </li>
+      
                     <li class="nav-item">
-                        <a class="nav-link" href="pages/icons/mdi.html">
-                            <span class="menu-title">Icons</span>
-                            <i class="mdi mdi-contacts menu-icon"></i>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pages/forms/basic_elements.html">
-                            <span class="menu-title">Forms</span>
-                            <i class="mdi mdi-format-list-bulleted menu-icon"></i>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pages/charts/chartjs.html">
-                            <span class="menu-title">Charts</span>
+                        <a class="nav-link" asp-controller="HomeAdmin" asp-action="DoanhThuTheoThang" asp-area="admin">
+                            <span class="menu-title">Bảng thống kê doanh thu</span>
                             <i class="mdi mdi-chart-bar menu-icon"></i>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pages/tables/basic-table.html">
-                            <span class="menu-title">Tables</span>
-                            <i class="mdi mdi-table-large menu-icon"></i>
                         </a>
                     </li>
                                         
